<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="@dimen/main_textfield_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/hint_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilJob"
        android:layout_width="@dimen/main_textfield_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/hint_job"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etJob"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreatUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_creat"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilJob"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnCreatUser"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="@dimen/common_padding_middle"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_default"
        app:cardCornerRadius="@dimen/common_padding_middle"
        app:cardElevation="@dimen/common_padding_default">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/common_padding_default">

            <TextView
                android:id="@+id/tvIdLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_id_label"
                android:textAppearance="?attr/textAppearanceHeadline5"/>

            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="ID USER"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <TextView
                android:id="@+id/tvNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_name_label"
                android:layout_marginTop="@dimen/common_padding_default"
                android:textAppearance="?attr/textAppearanceHeadline5"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="NAME USER"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <TextView
                android:id="@+id/tvJobLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_job_label"
                android:layout_marginTop="@dimen/common_padding_default"
                android:textAppearance="?attr/textAppearanceHeadline5"/>

            <TextView
                android:id="@+id/tvJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="JOB USER"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <TextView
                android:id="@+id/tvDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_date_label"
                android:layout_marginTop="@dimen/common_padding_default"
                android:textAppearance="?attr/textAppearanceHeadline5"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="CREATED AT USER"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvResultMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        tools:text="Messagge status"
        android:layout_margin="@dimen/common_padding_middle"/>

</androidx.constraintlayout.widget.ConstraintLayout>